--- a/Master_Blogger/Master_Blogger/Pages/ArticleDetails.cshtml
+++ b/Master_Blogger/Master_Blogger/Pages/ArticleDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{Id:long}"
+﻿@*@page "{Id:long}"
 @model ArticleDetailsModel
 @{
     ViewData["Title"] = "ArticleDetails";
@@ -87,4 +87,4 @@
             </div>
         </div>
     </div>
-</main>
+</main>*@
