--- a/Master_Blogger/Master_Blogger/Pages/Index.cshtml
+++ b/Master_Blogger/Master_Blogger/Pages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@*@page
 @model IndexModel
 @{
     ViewData["Title"] = "Index";
@@ -38,4 +38,4 @@
 
         </div>
     </div>
-</main>
+</main>*@
