--- a/Master_Blogger/Master_Blogger/Pages/Index.cshtml
+++ b/Master_Blogger/Master_Blogger/Pages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@*@page
+﻿@page
 @model IndexModel
 @{
     ViewData["Title"] = "Index";
@@ -30,7 +30,7 @@
                             @article.ShortDescription
                         </p>
                         <footer class="post-footer d-flex align-items-center">
-                            <div class="comments meta-last"><i class="icon-comment"></i>@article.CommentsCount</div>
+                            @*<div class="comments meta-last"><i class="icon-comment"></i>@article.CommentsCount</div>*@
                         </footer>
                     </div>
                 </div>
@@ -38,4 +38,4 @@
 
         </div>
     </div>
-</main>*@
+</main>
