Add And List Comment

--- a/Master_Blogger/Master_Blogger/Pages/ArticleDetails.cshtml
+++ b/Master_Blogger/Master_Blogger/Pages/ArticleDetails.cshtml
@@ -41,7 +41,7 @@
                     <header>
                         <h3 class="h6">Post Comments<span class="no-of-comments">(@Model.Article.CommentsCount)</span></h3>
                     </header>
-                    @*@foreach (var comment in Model.Article.Comments)
+                    @foreach (var comment in Model.Article.Comments)
                     {
                         <div class="comment">
                             <div class="comment-header d-flex justify-content-between">
@@ -58,7 +58,7 @@
                                 <p>@comment.Message</p>
                             </div>
                         </div>
-                    }*@
+                    }
 
                 </div>
 
